--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
 .btn {
   margin: 2px;
 }
+.divbtn {
+  float: left;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
